# wordflow

./: .gitignore  AGENTS.md  README.md  TESTING.md  french_words_full.csv  french_words_full.json  french_words_full.tsv  main.py  pyproject.toml  sample_10_words.csv  sample_10_words.json
api/: .env.example  Dockerfile  pyproject.toml
api/app/: main.py
api/app/core/: config.py  database.py  init_db.py
api/app/models/: __init__.py  models.py
api/app/routers/: imports.py  settings.py  study.py  wordbooks.py  words.py
api/app/schemas/: __init__.py  schemas.py
api/app/services/: importer.py  scheduler.py  srs.py
api/tests/: test_e2e_flow.py  test_importer.py
docker/: docker-compose.yml
web/: Dockerfile  agents.md  package-lock.json  package.json  tailwind.config.js
web/public/: sample-words.csv  test-words.csv
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/import/: page.tsx
web/src/app/search/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/stats/: page.tsx
web/src/app/study/: page.tsx
web/src/app/test-upload/: page.tsx
web/src/app/wordbooks/: page.tsx
web/src/components/animations/: TypewriterText.tsx
web/src/components/common/: DebugInfo.tsx  NetworkStatus.tsx
web/src/components/dashboard/: ActionCards.tsx  StatsCards.tsx
web/src/components/layout/: AppLayout.tsx  ModernLayout.tsx
web/src/components/navigation/: Sidebar.tsx
web/src/components/pronunciation/: TextToSpeech.tsx
web/src/contexts/: ThemeContext.tsx
web/src/lib/: api.ts  utils.ts
(+3 files in other folders)
