[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
